--- a/bento.env
+++ b/bento.env
@@ -3,7 +3,7 @@
 
 # ============= 网络配置 =============
 # 主机内网IP（重要：请使用内网IP以获得最佳性能）
-MASTER_HOST_IP=192.168.1.100
+MASTER_HOST_IP=172.31.0.9
 
 # ============= 资源配置 =============
 # Redis集群配置（集中式，支持80 GPU读写）
@@ -58,3 +58,6 @@ SNARK_TIMEOUT=180
 
 # 日志配置
 RUST_LOG=info
+
+
+PGBOUNCER_AUTH_DB=postgres
