--- a/worker.env
+++ b/worker.env
@@ -1,28 +1,28 @@
-# 僚机配置文件
+# Worker配置 - 连接到Master机器
 # 请根据实际情况修改以下配置
 
 # ============= 网络配置 =============
-# 主机内网IP（必须与主机配置一致）
-MASTER_HOST_IP=192.168.1.100
+# Master主机内网IP（重要：请使用内网IP以获得最佳性能）
+MASTER_HOST_IP=172.31.0.9
 
-# ============= 工作节点配置 (直连主节点，无需大量本地资源) =============
+# ============= 工作节点配置 =============
 # 工作节点唯一ID (每台工作节点必须不同: 1, 2, 3, ..., 9)
 WORKER_ID=1
 
 # ============= 应用配置 =============
-# 数据库连接（直连主节点）
-POSTGRES_HOST=postgres
+# 数据库连接 - 通过Master的pgbouncer连接池
+POSTGRES_HOST=172.31.0.9
 POSTGRES_DB=taskdb
-POSTGRES_PORT=5432
+POSTGRES_PORT=6432
 POSTGRES_USER=worker
 POSTGRES_PASSWORD=password
 
-# Redis连接（直连主节点）
-REDIS_HOST=redis
+# Redis连接
+REDIS_HOST=172.31.0.9
 REDIS_IMG=redis:7.2.5-alpine3.19
 
-# MinIO连接（直连主节点）
-MINIO_HOST=minio
+# MinIO连接
+MINIO_HOST=172.31.0.9
 MINIO_IMG=minio/minio:RELEASE.2024-05-28T17-19-04Z
 MINIO_ROOT_USER=admin
 MINIO_ROOT_PASS=password
