--- a/worker.env
+++ b/worker.env
@@ -13,7 +13,8 @@ WORKER_ID=1
 # 数据库连接 - 通过Master的pgbouncer连接池
 POSTGRES_HOST=172.31.0.9
 POSTGRES_DB=taskdb
-POSTGRES_PORT=5432
+# POSTGRES_PORT=5432
+POSTGRES_PORT=6432
 POSTGRES_USER=worker
 POSTGRES_PASSWORD=password
 
