refactor: rename log retrieval commands and update PgBouncer settings
- Renamed log commands in justfile from `logs-master` to `master-logs` and `logs-worker` to `worker-logs` for clarity.
- Updated PgBouncer configuration in `master-compose.yml` to change `POOL_MODE` from `transaction` to `session`, increased `DEFAULT_POOL_SIZE` from 20 to 50, and reduced `VERBOSE` logging from 1 to 0.

--- a/master-compose.yml
+++ b/master-compose.yml
@@ -151,12 +151,12 @@ services:
 
       # --- 3. 定义 PgBouncer 自身的行为 ---
       - AUTH_TYPE=md5
-      - POOL_MODE=transaction
+      - POOL_MODE=session
       - MAX_CLIENT_CONN=5000
-      - DEFAULT_POOL_SIZE=20
+      - DEFAULT_POOL_SIZE=50
       - MAX_SERVER_CONNECTIONS=200
-      # 增加日志输出，便于调试
-      - VERBOSE=1
+      # 减少日志输出
+      - VERBOSE=0
     networks:
       - bento-network
   # MinIO主节点
