feat: enhance Docker configurations and resource allocation
- Updated internal IP addresses in `bento.env` and `worker.env` for improved network performance.
- Introduced common agent configuration in `master-compose.yml` and `worker-compose.yml` to streamline agent service definitions.
- Increased resource limits for Redis, PostgreSQL, MinIO, and agent services to optimize performance.
- Added new Dockerfiles for pre-built agent and REST API binaries to facilitate easier builds and deployments.

--- a/worker-compose.yml
+++ b/worker-compose.yml
@@ -15,19 +15,27 @@ x-base-environment: &base-environment
   no_proxy: "localhost,127.0.0.1,::1,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
   NO_PROXY: "localhost,127.0.0.1,::1,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
 
+# Agent 通用配置
+x-agent-common: &agent-common
+  runtime: nvidia
+  build:
+    context: .
+    dockerfile: ${AGENT_DOCKERFILE:-dockerfiles/agent.prebuilt.dockerfile}
+    args:
+      BINARY_URL: ${BENTO_BINARY_URL:-https://github.com/boundless-xyz/boundless/releases/download/bento-v0.14.0/bento-bundle-linux-amd64.tar.gz}
+  restart: always
+  environment:
+    <<: *base-environment
+
 # 统一agent镜像版本管理
 x-agent-image: &agent-image risczero/risc0-bento-agent:2.3.0
 
 services:
   # GPU Prove Agents (Worker节点8个GPU)
   gpu_prove_agent0: &gpu-agent
-    image: *agent-image
-    runtime: nvidia
-    restart: always
-    mem_limit: 24G
-    cpus: 4
-    environment:
-      <<: *base-environment
+    <<: *agent-common
+    mem_limit: 64G
+    cpus: 16
     entrypoint: /app/agent -t prove --redis-ttl ${REDIS_TTL:-57600}
     deploy:
       resources:
