--- a/master-compose.yml
+++ b/master-compose.yml
@@ -13,6 +13,11 @@ x-base-environment: &base-environment
   RUST_LOG: ${RUST_LOG:-info}
   RISC0_HOME: /usr/local/risc0
   RUST_BACKTRACE: 1
+
+  # PoVW Configuration (official standard - minimal approach)
+  POVW_LOG_ID: ${POVW_LOG_ID:-}
+  RPC_URL: ${RPC_URL:-}
+  PRIVATE_KEY: ${PRIVATE_KEY:-}
   # 内网代理排除配置
   no_proxy: localhost,127.0.0.1,::1,172.16.0.0/12,10.0.0.0/8,192.168.0.0/16,minio,postgres,redis,pgbouncer
   NO_PROXY: localhost,127.0.0.1,::1,172.16.0.0/12,10.0.0.0/8,192.168.0.0/16,minio,postgres,redis,pgbouncer
@@ -20,11 +25,7 @@ x-base-environment: &base-environment
 # Agent 通用配置
 x-agent-common: &agent-common
   runtime: nvidia
-  build:
-    context: .
-    dockerfile: ${AGENT_DOCKERFILE:-dockerfiles/agent.prebuilt.dockerfile}
-    args:
-      BINARY_URL: ${BENTO_BINARY_URL:-https://github.com/boundless-xyz/boundless/releases/download/bento-v0.14.0/bento-bundle-linux-amd64.tar.gz}
+  image: bento-master-agent:latest
   restart: always
   depends_on:
     postgres:
@@ -264,13 +265,9 @@ services:
 
   # snark_agent1: { <<: *snark-agent }
 
-  # REST API - 使用本地dockerfile从源码构建（内置代理配置）
+  # REST API - 使用预构建镜像
   rest_api:
-    build:
-      context: .
-      dockerfile: ${REST_API_DOCKERFILE:-dockerfiles/rest_api.prebuilt.dockerfile}
-      args:
-        BINARY_URL: ${BENTO_BINARY_URL:-https://github.com/boundless-xyz/boundless/releases/download/bento-v0.14.0/bento-bundle-linux-amd64.tar.gz}
+    image: bento-master-rest_api:latest
     restart: always
     depends_on:
       postgres:
@@ -297,7 +294,66 @@ networks:
   bento-network:
     driver: bridge
 
+# # Broker service (commented out - not currently needed)
+# x-broker-environment: &broker-environment
+#   RUST_LOG: ${RUST_LOG:-info,broker=debug,boundless_market=debug}
+#   PRIVATE_KEY: ${PRIVATE_KEY}
+#   RPC_URL: ${RPC_URL}
+#   BOUNDLESS_MARKET_ADDRESS:
+#   SET_VERIFIER_ADDRESS:
+#   ORDER_STREAM_URL:
+#   POSTGRES_HOST:
+#   POSTGRES_DB:
+#   POSTGRES_PORT:
+#   POSTGRES_USER:
+#   POSTGRES_PASS:
+
+# x-broker-common: &broker-common
+#   restart: always
+#   depends_on:
+#     rest_api:
+#       condition: service_healthy
+#     gpu_prove_agent0:
+#       condition: service_started
+#     exec_agent0:
+#       condition: service_started
+#     exec_agent1:
+#       condition: service_started
+#     aux_agent:
+#       condition: service_started
+#     redis:
+#       condition: service_healthy
+#     postgres:
+#       condition: service_healthy
+#   profiles: [broker]
+#   build:
+#     context: .
+#     dockerfile: ${BROKER_DOCKERFILE:-dockerfiles/broker.prebuilt.dockerfile}
+#     args:
+#       BINARY_URL: ${BROKER_BINARY_URL:-https://github.com/boundless-xyz/boundless/releases/download/broker-v1.0.0/broker}
+#   mem_limit: 2G
+#   cpus: 2
+#   stop_grace_period: 3h
+#   network_mode: host
+
+#  broker:
+#    <<: *broker-common
+#    volumes:
+#      - type: bind
+#        source: ./broker.toml
+#        target: /app/broker.toml
+#      - broker-data:/db/
+#    environment:
+#      <<: *broker-environment
+#      PRIVATE_KEY: ${PRIVATE_KEY}
+#      RPC_URL: ${RPC_URL}
+#    entrypoint: /app/broker --db-url 'sqlite:///db/broker.db' --config-file /app/broker.toml --bento-api-url http://localhost:8081
+#    networks:
+#      - bento-network
+
 volumes:
   redis-data:
   postgres-data:
   minio-data:
+  povw-data:
+  # broker-data:
