fix: resolve broker network connectivity using host mode
- Add host network mode to broker-compose.yml for direct localhost access
- Configure broker entrypoint with explicit bento-api-url parameter
- Add Bento backend configuration to broker.toml
- Update justfile broker network validation logic
- Remove external network dependency for simplified connectivity

This resolves the REST API connection issues and enables proper
broker operation with the Bento proving backend.

--- a/broker.toml
+++ b/broker.toml
@@ -131,6 +131,10 @@ cache_dir = "./cache"
 #groth16_verify_gas_estimate = 250000
 
 [prover]
+# Prover backend type - use "bento" for local Bento API instead of Bonsai
+backend = "bento"
+# Bento API URL (use container service name for Docker networking)
+bento_api_url = "http://rest_api:8081"
 # Number of retries to poll for proving status.
 #
 # Provides a little durability for transient failures.
