--- a/broker-compose.yml
+++ b/broker-compose.yml
@@ -40,6 +40,7 @@ services:
     mem_limit: 2G
     cpus: 2
     stop_grace_period: 3h
+    network_mode: host
     volumes:
       - type: bind
         source: ./broker.toml
@@ -48,7 +49,7 @@ services:
     environment:
       RUST_LOG: ${RUST_LOG:-info,broker=debug,boundless_market=debug}
       PRIVATE_KEY: ${PRIVATE_KEY}
-      RPC_URL: http://5.39.222.250:9301
+      RPC_URL: ${RPC_URL:-http://5.39.222.250:9401}
       BOUNDLESS_MARKET_ADDRESS:
       SET_VERIFIER_ADDRESS:
       ORDER_STREAM_URL:
@@ -60,14 +61,7 @@ services:
       no_proxy: localhost,127.0.0.1,::1,172.16.0.0/12,10.0.0.0/8,192.168.0.0/16,minio,postgres,redis,pgbouncer
       NO_PROXY: localhost,127.0.0.1,::1,172.16.0.0/12,10.0.0.0/8,192.168.0.0/16,minio,postgres,redis,pgbouncer
 
-    entrypoint: /app/broker --db-url 'sqlite:///db/broker.db' --config-file /app/broker.toml --bento-api-url http://host.docker.internal:8081
-    networks:
-       - bento-network
-
-networks:
-  bento-network:
-    external: true
-    name: bento-master_bento-network
+    entrypoint: /app/broker --db-url 'sqlite:///db/broker.db' --config-file /app/broker.toml --bento-api-url http://localhost:8081
 
 volumes:
   broker-data:
