feat: add comprehensive broker environment configuration
- Configure Base mainnet RPC endpoint (port 9301)
- Add Base mainnet contract addresses and order stream URL
- Set up PostgreSQL connection parameters for broker
- Configure Bento API URL for local backend
- Add debug logging configuration

Private keys and sensitive addresses are left empty for security.

--- a/broker.env
+++ b/broker.env
@@ -1,9 +1,21 @@
 PRIVATE_KEY=
 POVW_LOG_ID=
-RPC_URL=
-BENTO_API_URL=http://localhost:8081
+RPC_URL=http://5.39.222.250:9301
+BENTO_API_URL=http://127.0.0.1:8081
 # Using local Bento instead of Bonsai
 # No Bonsai API credentials needed
+
+# Base Mainnet Configuration
+ORDER_STREAM_URL=https://base-mainnet.boundless.network
+SET_VERIFIER_ADDRESS=0x1Ab08498CfF17b9723ED67143A050c8E8c2e3104
+BOUNDLESS_MARKET_ADDRESS=0xfd152dadc5183870710fe54f939eae3ab9f0fe82
+
+# PostgreSQL connection for broker
+POSTGRES_HOST=postgres
+POSTGRES_DB=taskdb
+POSTGRES_PORT=5432
+POSTGRES_USER=worker
+POSTGRES_PASSWORD=password
 
 # Rust logging level
 RUST_LOG=info,broker=debug
